--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li><a href="services">Services</a></li>
         <li><a href="contact">Contact</a></li>
       </ul>
-        <a href="#" class="action_btn">Login</a>
+        <a href="#" class="action_btn">Admin</a>
 
       <div class="toggle_btn">
         <i class="fa-solid fa-bars-staggered"></i>
@@ -55,7 +55,7 @@
     <li><a href="about us">About Us</a></li>
     <li><a href="services">Services</a></li>
     <li><a href="contact">Contact</a></li>
-    <li><a href="#" class="action_btn">Login</a></li>
+    <li><a href="#" class="action_btn">Admin</a></li>
   </div>
 
 </header>
