--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
+  <link rel="shortcut icon" href="/images/logo.svg" type="image/x-icon">
 
   <!-- Initialize styles -->
   <link rel="stylesheet" href="style.css">
